--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Julia Joseph</title>
-	</head>
-	<body>
-		<p>A WEBSITE WOOO</p>
-	</body>
+<head>
+	<title>Julia Joseph</title>
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="js/scripts.js"></script>
+	<script src="js/scrolltofixed.js"></script>
+</head>
+
+<body>
+	<p>A WEBSITE WOOO</p>
+</body>
+
 </html>
