continued website stuff

--- a/index.html
+++ b/index.html
@@ -5,11 +5,91 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="js/scripts.js"></script>
+	<script src="js/stellar.js"></script>
 	<script src="js/scrolltofixed.js"></script>
 </head>
 
 <body>
-	<p>A WEBSITE WOOO</p>
+
+<div id="nav">
+	<ul>
+		<li><a href="#">Home</a></li>
+		<li><a href="#aboutme">About Me</a></li>
+		<li><a href="#work">Work Experience</a></li>
+		<li><a href="#portfolio">Portfolio</a></li>
+		<li><a href="resumeIS.pdf" target="_blank">Resume</a></li>
+	</ul>
+</div>
+
+<div id="aboutme" data-stellar-background-ratio="0.5">
+	<div class="inner" data-stellar-ratio="1.5">
+		<h1>Hi! My name is Julia, and I am an engineer.</h1>
+		<p></p>
+	</div>
+</div>
+<button id="learnmore" onclick="location.href='#bio'">Learn More</button>
+
+<div id="bio"><h1>Who I Am: The Basics</h1><hr class='long' /><p>I am a junior at Cornell University, studying Information Science, Systems, and Technology at Cornell's College of Engineering. I grew up in Rye Brook, New York, located in Westchester County.<br>On campus, I am:</p>
+	<ul>
+		<li>a member of the Big Red Marching Band Clarinet Section</li>
+		<li>the Historian and Parliemtarian for Phi Sigma Pi, a national honors fraternity</li>
+		<li>a TA for INFO 1300</li>
+		<li>a research assistant for the Reimagination Lab in the Department of Information Science</li>
+	</ul>
+	<p>In my spare time I like to read, make playlists on Spotify, run, make lists, and listen to poetry on YouTube.</p>
+</div>
+
+<div id="school" data-stellar-background-ratio="0.5">
+<div class="inner" data-stellar-ratio="2">
+	<h1>Who I Am: Schoolwork</h1><hr class='long' />
+	<p>
+		<strong>Year: </strong>2017<br><br>
+		<strong>College: </strong>Engineering<br><br>
+		<strong>Major: </strong>Information Science, Systems, and Technology<br><br>
+		<strong>Relevant Coursework: </strong><br></p><p class='indent'>Introduction to Programming with Python, Object Oriented Programming and Data Structures, Introduction to Programming with the Web, Intermediate Web Programming, Discrete Structures, Communication and Technology, Networks, Networks II, Perception, Computing Cultures, Basic Engineering Probability and Statistics<br><br>
+	</p>
+</div>
+</div>
+
+<div id="work">
+	<h1>Work Experience</h1>
+	<div class='workpic'>
+		<img src="img/jj.JPG" alt="JJ" />
+		<p class='description'>Johnson&amp;Johnson: IT Intern</p>
+	</div>
+	<div class='workpic'>
+		<img src="img/is.jpg" alt="IS" />
+		<p class='description'>Reimagination Lab: Research Assistant</p>
+	</div>
+	<div class='workpic'>
+		<img src="img/ean.png" alt="EAN" />
+		<p class='description'>Early Adopter Network: Quality Assurance Intern</p>
+	</div>
+	</ul>
+
+	<div id="jj">
+		<h3>Johnson&amp;Johnson: IT Intern</h3>
+	</div>
+
+	<div id="is">
+		<h3>Reimagination Lab: Research Assistant</h3>
+	</div>
+
+	<div id="ean">
+		<h3>Early Adopter Network: Quality Assurance Intern</h3>
+	</div>
+</div>
+
+<div id="portfolio">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cil</div>
 </body>
 
 </html>
