changes to work

--- a/index.html
+++ b/index.html
@@ -53,31 +53,67 @@
 
 <div id="work">
 	<h1>Work Experience</h1>
-	<div class='workpic'>
-		<img src="img/jj.JPG" alt="JJ" />
-		<p class='description'>Johnson&amp;Johnson: IT Intern</p>
-	</div>
-	<div class='workpic'>
-		<img src="img/is.jpg" alt="IS" />
-		<p class='description'>Reimagination Lab: Research Assistant</p>
-	</div>
-	<div class='workpic'>
-		<img src="img/ean.png" alt="EAN" />
-		<p class='description'>Early Adopter Network: Quality Assurance Intern</p>
-	</div>
+
+	<ul class="img-list">
+		<li>
+			<a href="#jj">
+				<img src="img/jj.JPG" alt="jj" />
+				<span class="text-content"><span>Johnson&amp;Johnson: IT Intern</span></span>
+			</a>
+		</li>
+		<li>
+			<a href="#is">
+				<img src="img/is.jpg" alt="is" />
+				<span class="text-content"><span>Reimagination Lab: Research Assistant</span></span>
+			</a>
+		</li>
+		<li>
+			<a href="#ean">
+				<img src="img/ean.png" alt="ean" />
+				<span class="text-content"><span>Early Adopter Network: Quality Assurance Intern</span></span>
+			</a>
+		</li>
 	</ul>
 
-	<div id="jj">
+	<div class="describe" id="jj">
 		<h3>Johnson&amp;Johnson: IT Intern</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure </p>
 	</div>
 
-	<div id="is">
+	<div class="describe" id="is">
 		<h3>Reimagination Lab: Research Assistant</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure </p>
 	</div>
 
-	<div id="ean">
+	<div class="describe" id="ean">
 		<h3>Early Adopter Network: Quality Assurance Intern</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure </p>
 	</div>
+
 </div>
 
 <div id="portfolio">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
