--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="js/scripts.js"></script>
 	<script src="js/stellar.js"></script>
+	<script src="js/smoothscroll.js"></script>
 	<script src="js/scrolltofixed.js"></script>
 </head>
 
@@ -16,7 +17,7 @@
 		<li><a href="#">Home</a></li>
 		<li><a href="#aboutme">About Me</a></li>
 		<li><a href="#work">Work Experience</a></li>
-		<li><a href="#portfolio">Portfolio</a></li>
+		<li><a href="#contact">Contact</a></li>
 		<li><a href="resumeIS.pdf" target="_blank">Resume</a></li>
 	</ul>
 </div>
@@ -58,7 +59,7 @@
 		<li>
 			<a href="#jj">
 				<img src="img/jj.JPG" alt="jj" />
-				<span class="text-content"><span>Johnson&amp;Johnson: IT Intern</span></span>
+				<span class="text-content"><span>Johnson &amp; Johnson: IT Intern</span></span>
 			</a>
 		</li>
 		<li>
@@ -76,56 +77,43 @@
 	</ul>
 
 	<div class="describe" id="jj">
-		<h3>Johnson&amp;Johnson: IT Intern</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure </p>
+		<h3>Johnson &amp; Johnson: IT Intern</h3>
+		<p>
+		<span class="jobheader"><strong>Duration: </strong>May 2015-August 2015</span><br><br>
+		<strong>The Job: </strong>
+		<span class="jobindent">
+			Assist Cyber Securiy Investigations with intelligence reports; work with Security Operations to develop innovative and new strategies of dealing with vulnerabilities; partnering with IT resources as well as the business to implement effective, innovative solutions to meet business needs while ensuring adequate security controls; work with engineering to ensure secure development of new enterprise platforms; assist with development and documentation of security policies.
+		</span>
+		</p>
 	</div>
 
 	<div class="describe" id="is">
 		<h3>Reimagination Lab: Research Assistant</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure </p>
+		<p>
+		<span class="jobheader"><strong>Duration: </strong>May 2014-present</span><br><br>
+		<strong>The Job: </strong>
+		<span class="jobindent">
+			Develop and implement research strategies for studying social media sharing on Tumblr; use 
+			the Tumblr API to create web tools for experimentation and analytics; read and analyze 
+			research materials; create and implement an interview campaign plan.
+		</span>
+		</p>
 	</div>
 
 	<div class="describe" id="ean">
 		<h3>Early Adopter Network: Quality Assurance Intern</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure </p>
+		<p>
+		<span class="jobheader"><strong>Duration: </strong>August 2014-present</span><br><br>
+		<strong>The Job: </strong>
+		<span class="jobindent">
+			Provide remote quality assurance, including functional testing and usability testing reports, for apps that run on OS X Mavericks and iOS devices.
+		</span>
+		</p>
 	</div>
 
 </div>
 
-<div id="portfolio">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cil</div>
+<div id="contact">I can be reached on Facebook, Twitter, and LinkedIn.</div>
 </body>
 
 </html>
