fixed contact, new resume

--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
 
 </div>
 
-<div id="contact">I can be reached on Facebook, Twitter, and LinkedIn.</div>
+<div id="contact">
+	<a href="https://www.facebook.com/julia.joseph.92798"><img src="img/facebook.png" alt="facebook" /></a>
+	<a href="https://twitter.com/JuliaRJoseph"><img src="img/twitter.png" alt="twitter" /></a>
+	<a href="https://www.linkedin.com/pub/julia-joseph/83/a35/293"><img src="img/linkedin.png" alt="linkedin" /></a>
+</div>
 </body>
 
 </html>
