--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Julia Joseph</title>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/scripts.js"></script>
 	<script src="js/stellar.js"></script>
 	<script src="js/smoothscroll.js"></script>
@@ -24,7 +24,7 @@
 
 <div id="aboutme" data-stellar-background-ratio="0.5">
 	<div class="inner" data-stellar-ratio="1.5">
-		<h1>Hi! My name is Julia, and I am an engineer.</h1>
+		<h1>Hi! My name is Julia, and I am an engineer and an artist.</h1>
 		<p></p>
 	</div>
 </div>
@@ -56,19 +56,19 @@
 	<h1>Work Experience</h1>
 
 	<ul class="img-list">
-		<li>
+		<li id="clickjj">
 			<a href="#jj">
 				<img src="img/jj.JPG" alt="jj" />
 				<span class="text-content"><span>Johnson &amp; Johnson: IT Intern</span></span>
 			</a>
 		</li>
-		<li>
+		<li id="clickis">
 			<a href="#is">
 				<img src="img/is.jpg" alt="is" />
 				<span class="text-content"><span>Reimagination Lab: Research Assistant</span></span>
 			</a>
 		</li>
-		<li>
+		<li id="clickean">
 			<a href="#ean">
 				<img src="img/ean.png" alt="ean" />
 				<span class="text-content"><span>Early Adopter Network: Quality Assurance Intern</span></span>
@@ -114,7 +114,9 @@
 </div>
 
 <div id="contact">
-	<a href="https://www.facebook.com/julia.joseph.92798"><img src="img/facebook.png" alt="facebook" /></a>
+	<span id="email">jrj85@cornell.edu</span><br>
+	<span id="phone">914-924-8219</span>
+	<a id="fb" href="https://www.facebook.com/julia.joseph.92798"><img src="img/facebook.png" alt="facebook" /></a>
 	<a href="https://twitter.com/JuliaRJoseph"><img src="img/twitter.png" alt="twitter" /></a>
 	<a href="https://www.linkedin.com/pub/julia-joseph/83/a35/293"><img src="img/linkedin.png" alt="linkedin" /></a>
 </div>
