changed a job desc.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<span class="jobheader"><strong>Duration: </strong>May 2015-August 2015</span><br><br>
 		<strong>The Job: </strong>
 		<span class="jobindent">
-			Assist Cyber Securiy Investigations with intelligence reports; work with Security Operations to develop innovative and new strategies of dealing with vulnerabilities; partnering with IT resources as well as the business to implement effective, innovative solutions to meet business needs while ensuring adequate security controls; work with engineering to ensure secure development of new enterprise platforms; assist with development and documentation of security policies.
+			Assist Cyber Securiy Investigations with intelligence reports, work with Security Operations to develop innovative and new strategies of dealing with vulnerabilities, partnering with IT resources to implement effective, innovative solutions to meet business needs while ensuring adequate security controls, work with engineering to ensure secure development of new enterprise platforms, work with Application Services to develop new business tools.
 		</span>
 		</p>
 	</div>
