changed job time for an

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 	<div class="describe" id="ean">
 		<h3>Early Adopter Network: Quality Assurance Intern</h3>
 		<p>
-		<span class="jobheader"><strong>Duration: </strong>August 2014-present</span><br><br>
+		<span class="jobheader"><strong>Duration: </strong>August 2014-August 2015</span><br><br>
 		<strong>The Job: </strong>
 		<span class="jobindent">
 			Provide remote quality assurance, including functional testing and usability testing reports, for apps that run on OS X Mavericks and iOS devices.
