--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Julia Joseph</title>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<link href="http://fonts.googleapis.com/css?family=Lato:300|Grand+Hotel" rel="stylesheet" type="text/css" />
 	<script src="js/scripts.js"></script>
 	<script src="js/stellar.js"></script>
 	<script src="js/smoothscroll.js"></script>
@@ -24,7 +25,7 @@
 
 <div id="aboutme" data-stellar-background-ratio="0.5">
 	<div class="inner" data-stellar-ratio="1.5">
-		<h1>Hi! My name is Julia, and I am an engineer and an artist.</h1>
+		<h1><span class='bold name'>Julia Joseph</span><br><span class='italics'>student, engineer, artist</span></h1>
 		<p></p>
 	</div>
 </div>
@@ -82,7 +83,9 @@
 		<span class="jobheader"><strong>Duration: </strong>May 2015-August 2015</span><br><br>
 		<strong>The Job: </strong>
 		<span class="jobindent">
-			Assist Cyber Securiy Investigations with intelligence reports, work with Security Operations to develop innovative and new strategies of dealing with vulnerabilities, partnering with IT resources to implement effective, innovative solutions to meet business needs while ensuring adequate security controls, work with engineering to ensure secure development of new enterprise platforms, work with Application Services to develop new business tools.
+			Develop tools using Python, cURL, and various APIs for Information Security and Risk Management to automate workflow processes, reducing time by 4 hours and decreasing human error.
+			Participate in several stretch projects for Application Services, including creating websites with HTML/CSS/JavaScript, and integrating Google Analytics with Visualforce/Salesforce websites.
+			Write threat advisory reports for Cyber Security Investigations.
 		</span>
 		</p>
 	</div>
@@ -93,9 +96,7 @@
 		<span class="jobheader"><strong>Duration: </strong>May 2014-present</span><br><br>
 		<strong>The Job: </strong>
 		<span class="jobindent">
-			Develop and implement research strategies for studying social media sharing on Tumblr; use 
-			the Tumblr API to create web tools for experimentation and analytics; read and analyze 
-			research materials; create and implement an interview campaign plan.
+			Develop research strategies based on previous experiments for studying sharing habits and patterns on Tumblr. Create a web tool using HTML/CSS, JQuery, AJAX, Python, Django, d3.js, Google Charts, and the Tumblr API to aid in gathering and displaying Tumblr data. Write research questions, contact and interview participants through Tumblr.
 		</span>
 		</p>
 	</div>
@@ -106,7 +107,7 @@
 		<span class="jobheader"><strong>Duration: </strong>August 2014-August 2015</span><br><br>
 		<strong>The Job: </strong>
 		<span class="jobindent">
-			Provide remote quality assurance, including functional testing and usability testing reports, for apps that run on OS X Mavericks and iOS devices.
+			Test iOS and OS X applications for clients provided through Early Adopter Network. Create functional test reports, including instructions on how to reproduce any bugs found. Create usability test reports based on specifications provided by the client.
 		</span>
 		</p>
 	</div>
