more changes, added favicon image w/o code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<link href="http://fonts.googleapis.com/css?family=Lato:300|Grand+Hotel" rel="stylesheet" type="text/css" />
+	<!-- <link rel="icon" type="image/x-icon" href="img/favicon.png" /> -->
 	<script src="js/scripts.js"></script>
 	<script src="js/stellar.js"></script>
 	<script src="js/smoothscroll.js"></script>
@@ -36,7 +37,7 @@
 		<li>a member of the Big Red Marching Band Clarinet Section</li>
 		<li>the Historian and Parliemtarian for Phi Sigma Pi, a national honors fraternity</li>
 		<li>a TA for INFO 1300</li>
-		<li>a research assistant for the Reimagination Lab in the Department of Information Science</li>
+		<li>a research assistant for the Reimagination Lab (Department of Information Science)</li>
 	</ul>
 	<p>In my spare time I like to read, make playlists on Spotify, run, make lists, and listen to poetry on YouTube.</p>
 </div>
