--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 	<script src="js/stellar.js"></script>
 	<script src="js/smoothscroll.js"></script>
 	<script src="js/scrolltofixed.js"></script>
+
+	<!-- Add fancyBox -->
+	<link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+	<script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+
+	<!-- Optionally add helpers - button, thumbnail and/or media -->
+	<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+	<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+	<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+
+	<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
+	<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 </head>
 
 <body>
@@ -19,6 +31,7 @@
 		<li><a href="#">Home</a></li>
 		<li><a href="#aboutme">About Me</a></li>
 		<li><a href="#work">Work Experience</a></li>
+		<li><a href="#portfolio">Portfolio</a></li>
 		<li><a href="#contact">Contact</a></li>
 		<li><a href="resumeIS.pdf" target="_blank">Resume</a></li>
 	</ul>
@@ -83,7 +96,7 @@
 		<p>
 		<span class="jobheader"><strong>Duration: </strong>May 2015-August 2015</span><br><br>
 		<strong>The Job: </strong>
-		<span class="jobindent">
+		<span id="qwerty" class="jobindent">
 			Develop tools using Python, cURL, and various APIs for Information Security and Risk Management to automate workflow processes, reducing time by 4 hours and decreasing human error.
 			Participate in several stretch projects for Application Services, including creating websites with HTML/CSS/JavaScript, and integrating Google Analytics with Visualforce/Salesforce websites.
 			Write threat advisory reports for Cyber Security Investigations.
@@ -115,6 +128,44 @@
 
 </div>
 
+<div id="portfolio">
+	<div id='portfolioheader'><h1>My Portfolio</h1></div>
+	<ul>
+		<li id="webmaster" class="projects">
+			<a class='fancybox' rel='groupone' href="img/large.png"><img alt="placeholder" src="img/small.png" /></a>
+			<div class="hidden">
+			<a class='fancybox' rel='groupone' href="img/large.png"><img alt="placeholder" src="img/small.png" /></a>
+			<a class='fancybox' rel='groupone' href="img/large.png"><img alt="placeholder" src="img/small.png" /></a>
+			</div>
+			<p>This is a website I am designing and developing for Anabel's Grocery, a student-run on-campus market. I am using HTML, CSS, JavaScript, JQuery, AJAX, PHP, and SQL to <span class="content 1">do this. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span><span class="show_hide" id="1"> ...Read More</span></p>
+		</li>
+
+		<li id="a" class="projects">
+			<a class='fancybox' rel='grouptwo' href="img/large2.png"><img alt="placeholder" src="img/small2.png" /></a>
+			<div class="hidden">
+			<a class='fancybox' rel='grouptwo' href="img/large2.png"><img alt="placeholder" src="img/small2.png" /></a>
+			<a class='fancybox' rel='grouptwo' href="img/large2.png"><img alt="placeholder" src="img/small2.png" /></a>
+			</div>
+			<p>This is a website I am designing and developing for Anabel's Grocery, a student-run on-campus market. I am using HTML, CSS, JavaScript, JQuery, AJAX, PHP, and SQL to <span class="content 2">do this.</span><span class="show_hide" id="2"> ...Read More</span></p>
+		</li>
+		
+		<li id="b" class="projects">
+			<a class='fancybox' rel='groupthree' href="img/large3.png"><img alt="placeholder" src="img/small3.png" /></a>
+			<div class="hidden">
+			<a class='fancybox' rel='groupthree' href="img/large3.png"><img alt="placeholder" src="img/small3.png" /></a>
+			<a class='fancybox' rel='groupthree' href="img/large3.png"><img alt="placeholder" src="img/small3.png" /></a>
+			</div>
+			<p>This is a website I am designing and developing for Anabel's Grocery, a student-run on-campus market. I am using HTML, CSS, JavaScript, JQuery, AJAX, PHP, and SQL to <span class="content 3">do this.</span><span class="show_hide" id="3"> ...Read More</span></p>
+		</li>
+	</ul>
+</div>
+
+
 <div id="contact">
 	<span id="email">jrj85@cornell.edu</span><br>
 	<span id="phone">914-924-8219</span>
@@ -122,6 +173,7 @@
 	<a href="https://twitter.com/JuliaRJoseph"><img src="img/twitter.png" alt="twitter" /></a>
 	<a href="https://www.linkedin.com/pub/julia-joseph/83/a35/293"><img src="img/linkedin.png" alt="linkedin" /></a>
 </div>
+
 </body>
 
 </html>
