button smooth scroll

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<p></p>
 	</div>
 </div>
-<button id="learnmore" onclick="location.href='#bio'">Learn More</button>
+<a href="#bio"><button id="learnmore">Learn More</button></a>
 
 <div id="bio"><h1>Who I Am: The Basics</h1><hr class='long' /><p>I am a junior at Cornell University, studying Information Science, Systems, and Technology at Cornell's College of Engineering. I grew up in Rye Brook, New York, located in Westchester County.<br>On campus, I am:</p>
 	<ul>
@@ -72,22 +72,16 @@
 
 	<ul class="img-list">
 		<li id="clickjj">
-			<a href="#jj">
 				<img src="img/jj.JPG" alt="jj" />
 				<span class="text-content"><span>Johnson &amp; Johnson: IT Intern</span></span>
-			</a>
 		</li>
 		<li id="clickis">
-			<a href="#is">
 				<img src="img/is.jpg" alt="is" />
 				<span class="text-content"><span>Reimagination Lab: Research Assistant</span></span>
-			</a>
 		</li>
 		<li id="clickean">
-			<a href="#ean">
 				<img src="img/ean.png" alt="ean" />
 				<span class="text-content"><span>Early Adopter Network: Quality Assurance Intern</span></span>
-			</a>
 		</li>
 	</ul>
 
