halfway done with portfolio updates

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<p></p>
 	</div>
 </div>
-<a href="#bio"><button id="learnmore">Learn More</button></a>
+<a href="#bio"><button id="learnmore">Learn More</button></a> 
 
 <div id="bio"><h1>Who I Am: The Basics</h1><hr class='long' /><p>I am a junior at Cornell University, studying Information Science, Systems, and Technology at Cornell's College of Engineering. I grew up in Rye Brook, New York, located in Westchester County.<br>On campus, I am:</p>
 	<ul>
@@ -126,26 +126,23 @@
 	<div id='portfolioheader'><h1>My Portfolio</h1></div>
 	<ul>
 		<li id="webmaster" class="projects">
-			<a class='fancybox' rel='groupone' href="img/large.png"><img alt="placeholder" src="img/small.png" /></a>
+			<a class='fancybox' rel='groupone' href="img/Home.jpg"><img alt="placeholder" src="img/HomeSmall.jpg" /></a>
 			<div class="hidden">
-			<a class='fancybox' rel='groupone' href="img/large.png"><img alt="placeholder" src="img/small.png" /></a>
-			<a class='fancybox' rel='groupone' href="img/large.png"><img alt="placeholder" src="img/small.png" /></a>
+			<a class='fancybox' rel='groupone' href="img/DiscountProgram.jpg"><img alt="placeholder" src="img/DiscountProgramSmall.jpg" /></a>
+			<a class='fancybox' rel='groupone' href="img/AboutUs.jpg"><img alt="placeholder" src="img/AboutUsSmall.jpg" /></a>
+			<a class='fancybox' rel='groupone' href="img/Products.jpg"><img alt="placeholder" src="img/ProductsSmall.jpg" /></a>
 			</div>
-			<p>This is a website I am designing and developing for Anabel's Grocery, a student-run on-campus market. I am using HTML, CSS, JavaScript, JQuery, AJAX, PHP, and SQL to <span class="content 1">do this. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span><span class="show_hide" id="1"> ...Read More</span></p>
+			<p>These are first-iteration mockups for a website I am designing and developing for Anabel's Grocery, a student-run on-campus market. I am using HTML, CSS, JavaScript, JQuery, AJAX, PHP, and SQL to <span class="content 1">do this. Some of the requirements for this project include: using technology to secure confidential student data, create the first iteration of the website in one month in time for the school year, and work with relevant teams (Marketing, Creative, Design, Programming, Risk Management, Data Analytics) to ensure that the website has all of the frontend and backend functionality it needs to be useful for both staff members and customers.</span><span class="show_hide" id="1"> ...Read More</span></p>
 		</li>
 
 		<li id="a" class="projects">
-			<a class='fancybox' rel='grouptwo' href="img/large2.png"><img alt="placeholder" src="img/small2.png" /></a>
+			<a class='fancybox' rel='grouptwo' href="img/BetaNuHome.png"><img alt="placeholder" src="img/BetaNuHomeSmall.png" /></a>
 			<div class="hidden">
-			<a class='fancybox' rel='grouptwo' href="img/large2.png"><img alt="placeholder" src="img/small2.png" /></a>
-			<a class='fancybox' rel='grouptwo' href="img/large2.png"><img alt="placeholder" src="img/small2.png" /></a>
+			<a class='fancybox' rel='grouptwo' href="img/BetaNu.png"><img alt="placeholder" src="img/BetaNuSmall.png" /></a>
+			<a class='fancybox' rel='grouptwo' href="img/AutofillBrothers.png"><img alt="placeholder" src="img/AutofillBrothersSmall.png" /></a>
+			<a class='fancybox' rel='grouptwo' href="img/EditBrothers.png"><img alt="placeholder" src="img/EditBrothersSmall.png" /></a>
 			</div>
-			<p>This is a website I am designing and developing for Anabel's Grocery, a student-run on-campus market. I am using HTML, CSS, JavaScript, JQuery, AJAX, PHP, and SQL to <span class="content 2">do this.</span><span class="show_hide" id="2"> ...Read More</span></p>
+			<p>These are screenshots of a small, personal website project that I created for my fraternity. I used HTML, CSS, JavaScript/JQuery, PHP, and SQLite to create it. The <span class="content 2">idea behind that project was to store information about "family trees" and "fraternity lineages" in a database that allowed for editing, deleting, and adding new members. The database is searchable. One interesting feature of the database (that I coded) is that it will automatically update the "Big" or "Little" fields of the relevant Brother when a new member of the lineage is added or edited. Highlighted techniques: I used AJAX to make my own autofill search bar, and I used PHP to dynamically generate "Edit" pages.</span><span class="show_hide" id="2"> ...Read More</span></p>
 		</li>
 		
 		<li id="b" class="projects">
@@ -154,7 +151,8 @@
 			<a class='fancybox' rel='groupthree' href="img/large3.png"><img alt="placeholder" src="img/small3.png" /></a>
 			<a class='fancybox' rel='groupthree' href="img/large3.png"><img alt="placeholder" src="img/small3.png" /></a>
 			</div>
-			<p>This is a website I am designing and developing for Anabel's Grocery, a student-run on-campus market. I am using HTML, CSS, JavaScript, JQuery, AJAX, PHP, and SQL to <span class="content 3">do this.</span><span class="show_hide" id="3"> ...Read More</span></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. <span class="content 3">do this.</span><span class="show_hide" id="3"> ...Read More</span></p>
 		</li>
 	</ul>
 </div>
