--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
 		</li>
 		
 		<li id="b" class="projects">
-			<a class='fancybox' rel='groupthree' href="img/large3.png"><img alt="placeholder" src="img/small3.png" /></a>
+			<a class='fancybox' rel='groupthree' href="img/p3Home.png"><img alt="placeholder" src="img/p3HomeSmall.png" /></a>
 			<div class="hidden">
-			<a class='fancybox' rel='groupthree' href="img/large3.png"><img alt="placeholder" src="img/small3.png" /></a>
-			<a class='fancybox' rel='groupthree' href="img/large3.png"><img alt="placeholder" src="img/small3.png" /></a>
+			<a class='fancybox' rel='groupthree' href="img/p3Albums.png"><img alt="placeholder" src="img/p3AlbumsSmall.png" /></a>
+			<a class='fancybox' rel='groupthree' href="img/p3Images.png"><img alt="placeholder" src="img/p3Images.png" /></a>
+			<a class='fancybox' rel='groupthree' href="img/p3EditImage.png"><img alt="placeholder" src="img/p3EditImageSmall.png" /></a>
 			</div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. <span class="content 3">do this.</span><span class="show_hide" id="3"> ...Read More</span></p>
+			<p>These are screenshots of a website that I built for Intermediate Programming for the Web (Info 2300). The website is a photo album database. I used HTML, CSS, JavaScript/JQuery, <span class="content 3">PHP, and SQL to build this. The photo album has login functionality: the base user experience supports viewing images and albums only, and the user has to log in to be able to edit, add, and delete albums and images.</span><span class="show_hide" id="3"> ...Read More</span></p>
 		</li>
 	</ul>
 </div>
