--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 	<div id='portfolioheader'><h1>My Portfolio</h1></div>
 	<ul>
 		<li id="webmaster" class="projects">
-			<a class='fancybox' rel='groupone' href="img/Home.jpg"><img alt="placeholder" src="img/HomeSmall.jpg" /></a>
+			<a class='fancybox' rel='groupone' href="img/Anabels1.png"><img alt="placeholder" src="img/Anabels1small.png" /></a>
 			<div class="hidden">
-			<a class='fancybox' rel='groupone' href="img/DiscountProgram.jpg"><img alt="placeholder" src="img/DiscountProgramSmall.jpg" /></a>
-			<a class='fancybox' rel='groupone' href="img/AboutUs.jpg"><img alt="placeholder" src="img/AboutUsSmall.jpg" /></a>
-			<a class='fancybox' rel='groupone' href="img/Products.jpg"><img alt="placeholder" src="img/ProductsSmall.jpg" /></a>
+			<a class='fancybox' rel='groupone' href="img/Anabels2.png"><img alt="placeholder" src="img/Anabels2small.png" /></a>
+			<a class='fancybox' rel='groupone' href="img/Anabels3.png"><img alt="placeholder" src="img/Anabels3small.png" /></a>
+			<a class='fancybox' rel='groupone' href="img/Anabels4.png"><img alt="placeholder" src="img/Anabels4small.png" /></a>
 			</div>
-			<p>These are first-iteration mockups for a website I am designing and developing for Anabel's Grocery, a student-run on-campus market. I am using HTML, CSS, JavaScript, JQuery, AJAX, PHP, and SQL to <span class="content 1">do this. Some of the requirements for this project include: using technology to secure confidential student data, create the first iteration of the website in one month in time for the school year, and work with relevant teams (Marketing, Creative, Design, Programming, Risk Management, Data Analytics) to ensure that the website has all of the frontend and backend functionality it needs to be useful for both staff members and customers.</span><span class="show_hide" id="1"> ...Read More</span></p>
+			<p>These are screenshots for a website I am designing and developing for Anabel's Grocery (<a href="anabelsgrocery.com">anabelsgrocery.com</a>), a student-run on-campus market. I am using HTML, CSS, JavaScript, JQuery, AJAX, PHP, and SQL to <span class="content 1">do this. Some of the requirements for this project include: using technology to secure confidential student data, create the first iteration of the website in one month in time for the school year, and work with relevant teams (Marketing, Creative, Design, Programming, Risk Management, Data Analytics) to ensure that the website has all of the frontend and backend functionality it needs to be useful for both staff members and customers.</span><span class="show_hide" id="1"> ...Read More</span></p>
 		</li>
 
 		<li id="a" class="projects">
