classes, fixing gradient

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<strong>Year: </strong>2017<br><br>
 		<strong>College: </strong>Engineering<br><br>
 		<strong>Major: </strong>Information Science, Systems, and Technology<br><br>
-		<strong>Relevant Coursework: </strong><br></p><p class='indent'>Introduction to Programming with Python, Object Oriented Programming and Data Structures, Introduction to Programming with the Web, Intermediate Web Programming, Discrete Structures, Communication and Technology, Networks, Networks II, Perception, Computing Cultures, Basic Engineering Probability and Statistics<br><br>
+		<strong>Relevant Coursework: </strong><br></p><p class='indent'>Introduction to Programming with Python, Object Oriented Programming and Data Structures, Introduction to Programming with the Web, Intermediate Web Programming, Discrete Structures, Communication and Technology, Networks, Networks II, Perception, Computing Cultures, Basic Engineering Probability and Statistics, Engineering Probability and Statistics II, Optimization, Introduction to Artificial Intelligence<br><br>
 	</p>
 </div>
 </div>
