--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<li>a TA for INFO 1300</li>
 		<li>a research assistant for the Reimagination Lab (Department of Information Science)</li>
 	</ul>
-	<p>In my spare time I like to read, make playlists on Spotify, run, make lists, and listen to poetry on YouTube.</p>
+	<p>In my spare time I like to read, make playlists on Spotify, run, make lists, and listen to poetry on YouTube.<br><br>I designed and coded this website from scratch, using HTML, CSS, JavaScript, and JQuery.</p>
 </div>
 
 <div id="school" data-stellar-background-ratio="0.5">
