--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
 <div id="bio"><h1>Who I Am: The Basics</h1><hr class='long' /><p>I am a junior at Cornell University, studying Information Science, Systems, and Technology at Cornell's College of Engineering. I grew up in Rye Brook, New York, located in Westchester County.<br>On campus, I am:</p>
 	<ul>
 		<li>a member of the Big Red Marching Band Clarinet Section</li>
-		<li>the Historian and Parliemtarian for Phi Sigma Pi, a national honors fraternity</li>
-		<li>a TA for INFO 1300</li>
+		<li>the Webmaster of Anabel's Grocery, a student-run grocery store</li>
+		<li>a member of Phi Sigma Pi, a national honors fraternity</li>
+	</ul>
+	<p>In the past, I have been:</p>
+	<ul>
+		<li>a Teaching Assistant for INFO 1300</li>
+		<li>the Historian and Parliamentarian for Phi Sigma Pi</li>
 		<li>a research assistant for the Reimagination Lab (Department of Information Science)</li>
 	</ul>
 	<p>In my spare time I like to read, make playlists on Spotify, run, make lists, and listen to poetry on YouTube.<br><br><span class="pink">I designed and coded this website from scratch, using HTML, CSS, JavaScript, and JQuery.</span></p>
@@ -62,7 +67,7 @@
 		<strong>Year: </strong>2017<br><br>
 		<strong>College: </strong>Engineering<br><br>
 		<strong>Major: </strong>Information Science, Systems, and Technology<br><br>
-		<strong>Relevant Coursework: </strong><br></p><p class='indent'>Introduction to Programming with Python, Object Oriented Programming and Data Structures, Introduction to Programming with the Web, Intermediate Web Programming, Discrete Structures, Communication and Technology, Networks, Networks II, Perception, Computing Cultures, Basic Engineering Probability and Statistics, Engineering Probability and Statistics II, Optimization, Introduction to Artificial Intelligence<br><br>
+		<strong>Relevant Coursework: </strong><br></p><p class='indent'>Introduction to Programming with Python; Object Oriented Programming and Data Structures; Introduction to Programming with the Web; Intermediate Web Programming; Discrete Structures; Communication and Technology; Networks; Networks II; Perception; Computing Cultures; Basic Engineering Probability and Statistics; Engineering Probability and Statistics II; Optimization; Introduction to Artificial Intelligence; Reasoning and Agents<span class="blue">***</span>; Data, Design, and Society<span class="blue">***</span><br><br><span class="blue">***</span> Taken at the University of Edinburgh
 	</p>
 </div>
 </div>
