--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<li>the Historian and Parliamentarian for Phi Sigma Pi</li>
 		<li>a research assistant for the Reimagination Lab (Department of Information Science)</li>
 	</ul>
-	<p>In my spare time I like to read, make playlists on Spotify, run, make lists, and listen to poetry on YouTube.<br><br><span class="pink">I designed and coded this website from scratch, using HTML, CSS, JavaScript, and JQuery.</span></p>
+	<p>In my spare time I like to read, make playlists on Spotify, run, play the ukulele/piano/clarinet, make lists, and listen to poetry on YouTube.<br><br><span class="pink">I designed and coded this website from scratch, using HTML, CSS, JavaScript, and JQuery.</span></p>
 </div>
 
 <div id="school" data-stellar-background-ratio="0.5">
@@ -67,7 +67,7 @@
 		<strong>Year: </strong>2017<br><br>
 		<strong>College: </strong>Engineering<br><br>
 		<strong>Major: </strong>Information Science, Systems, and Technology<br><br>
-		<strong>Relevant Coursework: </strong><br></p><p class='indent'>Introduction to Programming with Python; Object Oriented Programming and Data Structures; Introduction to Programming with the Web; Intermediate Web Programming; Discrete Structures; Communication and Technology; Networks; Networks II; Perception; Computing Cultures; Basic Engineering Probability and Statistics; Engineering Probability and Statistics II; Optimization; Introduction to Artificial Intelligence; Reasoning and Agents<span class="blue">***</span>; Data, Design, and Society<span class="blue">***</span><br><br><span class="blue">***</span> Taken at the University of Edinburgh
+		<strong>Relevant Coursework: </strong><br></p><p class='indent'>Intermediate Web Programming; Object Oriented Programming and Data Structures; Discrete Structures; Basic Engineering Probability and Statistics; Engineering Probability and Statistics II; Optimization; Introduction to Artificial Intelligence; Networks; Networks II; Introduction to Programming with Python; Introduction to Programming with the Web; Communication and Technology; Perception; Computing Cultures; Reasoning and Agents<span class="blue">***</span>; Data, Design, and Society<span class="blue">***</span><br><br><span class="blue">***</span> Taken at the University of Edinburgh
 	</p>
 </div>
 </div>
