--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<strong>Year: </strong>2017<br><br>
 		<strong>College: </strong>Engineering<br><br>
 		<strong>Major: </strong>Information Science, Systems, and Technology<br><br>
-		<strong>Relevant Coursework: </strong><br></p><p class='indent'>Intermediate Web Programming; Object Oriented Programming and Data Structures; Discrete Structures; Basic Engineering Probability and Statistics; Engineering Probability and Statistics II; Optimization; Introduction to Artificial Intelligence; Networks; Networks II; Introduction to Programming with Python; Introduction to Programming with the Web; Communication and Technology; Perception; Computing Cultures; Reasoning and Agents<span class="blue">***</span>; Data, Design, and Society<span class="blue">***</span><br><br><span class="blue">***</span> Taken at the University of Edinburgh
+		<strong>Relevant Coursework: </strong><br></p><p class='indent'>Intermediate Web Programming; Object Oriented Programming and Data Structures; Discrete Structures; Basic Engineering Probability and Statistics; Engineering Probability and Statistics II; Optimization; Introduction to Artificial Intelligence; Networks; Networks II; Introduction to Programming with Python; Introduction to Programming with the Web; Communication and Technology; Perception; Computing Cultures; Reasoning and Agents<span class="blue">***</span>; Data, Design, and Society<span class="blue">***</span><br><br><span class="blue">***</span> Taken at the University of Edinburgh, Spring 2016
 	</p>
 </div>
 </div>
@@ -137,7 +137,7 @@
 			<a class='fancybox' rel='groupone' href="img/Anabels3.png"><img alt="placeholder" src="img/Anabels3small.png" /></a>
 			<a class='fancybox' rel='groupone' href="img/Anabels4.png"><img alt="placeholder" src="img/Anabels4small.png" /></a>
 			</div>
-			<p>These are screenshots for a website I am designing and developing for Anabel's Grocery (<a id="anabels" href="http://www.anabelsgrocery.com">anabelsgrocery.com</a>), a student-run on-campus market. I am using HTML, CSS, JavaScript, JQuery, AJAX, PHP, and SQL to <span class="content 1">do this. Some of the requirements for this project include: using technology to secure confidential student data, create the first iteration of the website in one month in time for the school year, and work with relevant teams (Marketing, Creative, Design, Programming, Risk Management, Data Analytics) to ensure that the website has all of the frontend and backend functionality it needs to be useful for both staff members and customers.</span><span class="show_hide" id="1"> ...Read More</span></p>
+			<p>These are screenshots for a website I am designing and developing for Anabel's Grocery (<a id="anabels" target="_blank" href="http://www.anabelsgrocery.com">anabelsgrocery.com</a>), a student-run on-campus market. I am using HTML, CSS, JavaScript, JQuery, AJAX, PHP, and SQL to <span class="content 1">do this. Some of the requirements for this project include: using technology to secure confidential student data, create the first iteration of the website in one month in time for the school year, and work with relevant teams (Marketing, Creative, Design, Programming, Risk Management, Data Analytics) to ensure that the website has all of the frontend and backend functionality it needs to be useful for both staff members and customers.</span><span class="show_hide" id="1"> ...Read More</span></p>
 		</li>
 
 		<li id="a" class="projects">
