--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <div id="aboutme" data-stellar-background-ratio="0.5">
 	<div class="inner" data-stellar-ratio="1.5">
-		<h1><span class='bold name'>Julia Joseph</span><br><span class='italics'>student, engineer, artist</span></h1>
+		<h1><span class='bold name'>Julia Joseph</span><br><br><span class='italics'>student, engineer, artist</span></h1>
 		<p></p>
 	</div>
 </div>
@@ -164,11 +164,13 @@
 
 
 <div id="contact">
-	<span id="email">jrj85@cornell.edu</span><br>
-	<span id="phone">914-924-8219</span>
-	<a id="fb" href="https://www.facebook.com/julia.joseph.92798"><img src="img/facebook.png" alt="facebook" /></a>
-	<a href="https://twitter.com/JuliaRJoseph"><img src="img/twitter.png" alt="twitter" /></a>
-	<a href="https://www.linkedin.com/pub/julia-joseph/83/a35/293"><img src="img/linkedin.png" alt="linkedin" /></a>
+	<span id="info">
+	<a target="_blank" href="https://www.linkedin.com/pub/julia-joseph/83/a35/293"><img src="img/linkedin.svg" alt="linkedin" /></a>
+	<a target="_blank" href="https://github.com/juljoseph33"><img src="img/github.svg" alt="github" /></a>
+	<span id="specific">jrj85@cornell.edu  &bull;  914-924-8219</span>
+	<a id="fb" target="_blank" href="https://www.facebook.com/julia.joseph.92798"><img src="img/facebook.svg" alt="facebook" /></a>
+	<a target="_blank" href="https://twitter.com/JuliaRJoseph"><img src="img/twitter.svg" alt="twitter" /></a>
+	</span>
 </div>
 
 </body>
